--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -18,7 +18,7 @@
       </div>
     </header>
     <div class="container">
-      <div class="col-sm-6 margin">
+      <div class="col-sm-6">
         <div class="panel panel-primary">
           <div class="panel-heading">
             <h3 class="panel-title">My Tasks</h3>
